--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:background="@drawable/background_card"
     android:orientation="vertical" >
 
     <com.etsy.android.grid.util.DynamicHeightImageView
         android:id="@+id/image"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:scaleType="fitStart"
         />
 
     <TextView
@@ -17,9 +18,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="4dp"
-        android:paddingTop="4dp"
         android:paddingLeft="8dp"
         android:paddingRight="8dp"
+        android:paddingTop="4dp"
         android:textSize="18sp"/>
 
     <View
@@ -32,9 +33,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="8dp"
-        android:paddingTop="4dp"
         android:paddingLeft="8dp"
-        android:paddingRight="8dp" />
+        android:paddingRight="8dp"
+        android:paddingTop="4dp" />
 
 
 </LinearLayout>
